<resources>
    <string name="app_name">ImageEditor</string>
    <string name="search">title_search</string>
    <string name="collection">Collection</string>
    <string name="enter_image_name">Enter image name</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_exit_app">Are you sure want to exit app?</string>
    <string name="msg_empty_search">Please enter text to search</string>
    <string name="not_found_result">Can not find any result with your query</string>
    <string name="detail_image">Detail Image</string>
    <string name="crop">Crop</string>
    <string name="filter">Filter</string>
    <string name="draw">Draw</string>
    <string name="brightness">Brightness</string>
    <string name="icon">Icon</string>
    <string name="want_to_download">Do you want to download this image?</string>
    <string name="failed_create_media_record">Failed to create new MediaStore record.</string>
    <string name="downloading_file">Downloading file. Please wait...</string>
    <string name="failed_save_bitmap">Failed to save bitmap.</string>
    <string name="failed_open_output_stream">Failed to open output stream.</string>
    <string name="can_not_save_image">Can not save image</string>
    <string name="result">Result</string>
</resources>
